TapiAlarm and Eth, minor corrections. Tree and OAS modules.

--- a/OAS/tapi-equipment@2019-03-31.yaml
+++ b/OAS/tapi-equipment@2019-03-31.yaml
@@ -1288,93 +1288,6 @@ paths:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-equipment:physical-context/name/:
-    post:
-      tags:
-      - "tapi-equipment"
-      summary: "creates tapi.common.NameAndValue"
-      description: "List of names. This value is unique in some namespace but may\
-        \ change during the life of the entity.\r\n                A name carries\
-        \ no semantics with respect to the purpose of the entity."
-      parameters:
-      - in: "body"
-        name: "tapi.common.NameAndValue.body-param"
-        description: "tapi.common.NameAndValue to be added to list"
-        required: false
-        schema:
-          $ref: "#/definitions/tapi.common.NameAndValueWrapper"
-      responses:
-        201:
-          description: "Object created"
-        400:
-          description: "Internal error"
-        409:
-          description: "Object already exists"
-  /data/tapi-common:context/tapi-equipment:physical-context/name={value-name}/:
-    get:
-      tags:
-      - "tapi-equipment"
-      summary: "returns tapi.common.NameAndValue"
-      description: "List of names. This value is unique in some namespace but may\
-        \ change during the life of the entity.\r\n                A name carries\
-        \ no semantics with respect to the purpose of the entity."
-      parameters:
-      - name: "value-name"
-        in: "path"
-        description: "Id of name"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "tapi.common.NameAndValue"
-          schema:
-            $ref: "#/definitions/tapi.common.NameAndValueWrapper"
-        400:
-          description: "Internal error"
-    put:
-      tags:
-      - "tapi-equipment"
-      summary: "creates or updates tapi.common.NameAndValue"
-      description: "List of names. This value is unique in some namespace but may\
-        \ change during the life of the entity.\r\n                A name carries\
-        \ no semantics with respect to the purpose of the entity."
-      parameters:
-      - name: "value-name"
-        in: "path"
-        description: "Id of name"
-        required: true
-        type: "string"
-      - in: "body"
-        name: "tapi.common.NameAndValue.body-param"
-        description: "tapi.common.NameAndValue to be added or updated"
-        required: false
-        schema:
-          $ref: "#/definitions/tapi.common.NameAndValueWrapper"
-      responses:
-        201:
-          description: "Object created"
-        400:
-          description: "Internal error"
-        204:
-          description: "Object modified"
-    delete:
-      tags:
-      - "tapi-equipment"
-      summary: "removes tapi.common.NameAndValue"
-      description: "List of names. This value is unique in some namespace but may\
-        \ change during the life of the entity.\r\n                A name carries\
-        \ no semantics with respect to the purpose of the entity."
-      parameters:
-      - name: "value-name"
-        in: "path"
-        description: "Id of name"
-        required: true
-        type: "string"
-      responses:
-        400:
-          description: "Internal error"
-        204:
-          description: "Object deleted"
   /data/tapi-common:context/tapi-equipment:physical-context/physical-span={uuid}/:
     get:
       tags:
@@ -5994,21 +5907,18 @@ definitions:
       prefix: "tapi-equipment"
       namespace: "urn:onf:otcc:yang:tapi-equipment"
   tapi.equipment.PhysicalContext:
-    allOf:
-    - $ref: "#/definitions/tapi.common.GlobalClass"
-    - type: "object"
-      properties:
-        device:
-          type: "array"
-          description: "none"
-          items:
-            $ref: "#/definitions/tapi.equipment.Device"
-        physical-span:
-          type: "array"
-          description: "none"
-          items:
-            $ref: "#/definitions/tapi.equipment.PhysicalSpan"
-      description: "none"
+    type: "object"
+    properties:
+      device:
+        type: "array"
+        description: "none"
+        items:
+          $ref: "#/definitions/tapi.equipment.Device"
+      physical-span:
+        type: "array"
+        description: "none"
+        items:
+          $ref: "#/definitions/tapi.equipment.PhysicalSpan"
   tapi.equipment.PhysicalContextWrapper:
     properties:
       tapi-equipment:physical-context:
