Several Modifications - 2.3 delivery candidate 1.  TapiAlarm renamed TapiFm, simplified parameters 2.  Added pointer from CurrentData to Mep/Mip/Cep 3.  OtsiCapabilityPac augments SIP, now also NEP (through new OtsiNodeEdgePointSpec). Added maxNumOfOtsi, integer. 4.  TapiEquipment, added LocalClass to ActualNonFieldReplaceableModule and ExpectedNonFieldReplaceableModule. 5.  Agreement to keep the cepRole attribute in CEP and add it to CSEP (csepRole - ConnectivityServiceSpecReference) 6.  All interfaces moved to “deprecated”. 7.  TapiCommon, added DIGITAL_OTN in LayerProtocolName, which deprecates “ODU”. 8.  TapiConnectivity, added layerProtocolName and Qualifier to ConnectivityService. 9.  TapiPathComp: the correct association between Path and Link is [* → 1..*] (rather than 1→ 1..*) 10.  Added fecMonitoring boolean to OtuMep (default true) and fecCorrectedErrorThreshold, OduFecPerformanceData augments CD and HD. 11.  TapiTopology, added PlugIn pac to NEP. 12.  TapiTopology, NEP: a.  Added supportedMuxSequences: MultiplexingSequence [1..*] b.  Added availableMuxSequences: MultiplexingSequence [1..*] c.  Added baseLayerProtocolQualifier: LayerProtocolQualifier [1] 13.  TapiPathComputation, added PhysicalCepPac, OtsCepPac, OmsCepPac, McCepPac as packages of MediaChannelConnectionEndPointSpec. 14.  TapiOdu, removed ES counter. 15.  TapiPhotonicMedia, deleted OtsiAssemblyConnectionEndPointSpec and OtsiServerAdaptationPac classes. Note that both ones were already marked as “deprecated” in TAPI 2.1.3 16.  TapiPhotonicMedia, the OtsiaCsepTtpPac no longer augments OtuOtsiaCsepTtpPac but directly the CSEP and the ServerConstraint. OtsiaCsepTtpPac now includes the totalPowerWarnThresholdUpper and totalPowerWarnThresholdLower. 17.  TapiFm, AlarmInfo, removed LayerInfo, replaced by more generic AlarmQualifier. 18.  Added OTS_OMS layer qualifier to PhotonicLayerQualifier 19.  OtsiSip, set as optional [0..1] the OtsiCapabilityPac and TotalPowerThresholdPac, as they are already m

--- a/OAS/tapi-notification@2019-03-31.yaml
+++ b/OAS/tapi-notification@2019-03-31.yaml
@@ -1522,6 +1522,7 @@ definitions:
     - "ETH"
     - "DSR"
     - "PHOTONIC_MEDIA"
+    - "DIGITAL_OTN"
   tapi.common.LifecycleState:
     type: "string"
     enum:
