--- a/OAS/tapi-common@2019-03-31.yaml
+++ b/OAS/tapi-common@2019-03-31.yaml
@@ -606,6 +606,7 @@ definitions:
     - "ETH"
     - "DSR"
     - "PHOTONIC_MEDIA"
+    - "DIGITAL_OTN"
   tapi.common.LifecycleState:
     type: "string"
     enum:
