--- a/OAS/tapi-virtual-network@2019-03-31.yaml
+++ b/OAS/tapi-virtual-network@2019-03-31.yaml
@@ -3367,6 +3367,93 @@ paths:
             $ref: "#/definitions/tapi.topology.NepLayerProtocolCapabilityWrapper"
         400:
           description: "Internal error"
+  ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/owned-node-edge-point={owned-node-edge-point-uuid}/available-mux-sequence/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.topology.MultiplexingSequence"
+      description: "More detailed description of available capability than 'availableCepLayerProtocol'."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of topology"
+        required: true
+        type: "string"
+      - name: "node-uuid"
+        in: "path"
+        description: "Id of node"
+        required: true
+        type: "string"
+      - name: "owned-node-edge-point-uuid"
+        in: "path"
+        description: "Id of owned-node-edge-point"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.topology.MultiplexingSequence"
+          schema:
+            $ref: "#/definitions/tapi.topology.MultiplexingSequenceWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/owned-node-edge-point={owned-node-edge-point-uuid}/available-mux-sequence/capacity/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.common.CapacityValue"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of topology"
+        required: true
+        type: "string"
+      - name: "node-uuid"
+        in: "path"
+        description: "Id of node"
+        required: true
+        type: "string"
+      - name: "owned-node-edge-point-uuid"
+        in: "path"
+        description: "Id of owned-node-edge-point"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.CapacityValue"
+          schema:
+            $ref: "#/definitions/tapi.common.CapacityValueWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/owned-node-edge-point={owned-node-edge-point-uuid}/inter-domain-plug-in-pac/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.topology.InterDomainPlugInPac"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of topology"
+        required: true
+        type: "string"
+      - name: "node-uuid"
+        in: "path"
+        description: "Id of node"
+        required: true
+        type: "string"
+      - name: "owned-node-edge-point-uuid"
+        in: "path"
+        description: "Id of owned-node-edge-point"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.topology.InterDomainPlugInPac"
+          schema:
+            $ref: "#/definitions/tapi.topology.InterDomainPlugInPacWrapper"
+        400:
+          description: "Internal error"
   ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/owned-node-edge-point={owned-node-edge-point-uuid}/mapped-service-interface-point={service-interface-point-uuid}/
   : get:
       tags:
@@ -3439,6 +3526,64 @@ paths:
           description: "tapi.common.NameAndValue"
           schema:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/owned-node-edge-point={owned-node-edge-point-uuid}/supported-mux-sequence/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.topology.MultiplexingSequence"
+      description: "More detailed description of (potential) capability than 'availableCepLayerProtocol'."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of topology"
+        required: true
+        type: "string"
+      - name: "node-uuid"
+        in: "path"
+        description: "Id of node"
+        required: true
+        type: "string"
+      - name: "owned-node-edge-point-uuid"
+        in: "path"
+        description: "Id of owned-node-edge-point"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.topology.MultiplexingSequence"
+          schema:
+            $ref: "#/definitions/tapi.topology.MultiplexingSequenceWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/owned-node-edge-point={owned-node-edge-point-uuid}/supported-mux-sequence/capacity/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.common.CapacityValue"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of topology"
+        required: true
+        type: "string"
+      - name: "node-uuid"
+        in: "path"
+        description: "Id of node"
+        required: true
+        type: "string"
+      - name: "owned-node-edge-point-uuid"
+        in: "path"
+        description: "Id of owned-node-edge-point"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.CapacityValue"
+          schema:
+            $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
   ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/owned-node-edge-point={owned-node-edge-point-uuid}/total-potential-capacity/
@@ -5511,6 +5656,7 @@ definitions:
     - "ETH"
     - "DSR"
     - "PHOTONIC_MEDIA"
+    - "DIGITAL_OTN"
   tapi.common.LifecycleState:
     type: "string"
     enum:
@@ -6190,6 +6336,19 @@ definitions:
     properties:
       output:
         $ref: "#/definitions/tapi.topology.gettopologylist.Output"
+  tapi.topology.InterDomainPlugInPac:
+    type: "object"
+    properties:
+      inter-domain-plug-id-dapi:
+        type: "string"
+        description: "Trail trace identifier: Destination Access Point Identifier"
+      inter-domain-plug-id-sapi:
+        type: "string"
+        description: "Trail trace identifier: Source Access Point Identifier."
+  tapi.topology.InterDomainPlugInPacWrapper:
+    properties:
+      inter-domain-plug-in-pac:
+        $ref: "#/definitions/tapi.topology.InterDomainPlugInPac"
   tapi.topology.InterRuleGroup:
     allOf:
     - $ref: "#/definitions/tapi.common.CapacityPac"
@@ -6299,6 +6458,25 @@ definitions:
     properties:
       link:
         $ref: "#/definitions/tapi.topology.Link"
+  tapi.topology.MultiplexingSequence:
+    type: "object"
+    properties:
+      layer-protocol-qualifier:
+        type: "array"
+        description: "none"
+        items:
+          type: "string"
+      number-of-cep-instances:
+        type: "integer"
+        format: "int32"
+        description: "none"
+      capacity:
+        description: "none"
+        $ref: "#/definitions/tapi.common.CapacityValue"
+  tapi.topology.MultiplexingSequenceWrapper:
+    properties:
+      available-mux-sequence:
+        $ref: "#/definitions/tapi.topology.MultiplexingSequence"
   tapi.topology.NepLayerProtocolCapability:
     type: "object"
     properties:
@@ -6415,9 +6593,25 @@ definitions:
             \ are equivalent for usage."
           items:
             $ref: "#/definitions/tapi.topology.NodeEdgePointRef"
+        supported-mux-sequence:
+          type: "array"
+          description: "More detailed description of (potential) capability than 'availableCepLayerProtocol'."
+          items:
+            $ref: "#/definitions/tapi.topology.MultiplexingSequence"
         layer-protocol-name:
           description: "The layer protocol of the NodeEdgePoint (NEP)."
           $ref: "#/definitions/tapi.common.LayerProtocolName"
+        available-mux-sequence:
+          type: "array"
+          description: "More detailed description of available capability than 'availableCepLayerProtocol'."
+          items:
+            $ref: "#/definitions/tapi.topology.MultiplexingSequence"
+        base-layer-protocol-qualifier:
+          type: "string"
+          description: "none"
+        inter-domain-plug-in-pac:
+          description: "none"
+          $ref: "#/definitions/tapi.topology.InterDomainPlugInPac"
         link-port-direction:
           description: "The orientation of flow at the (conceptual) port of the associated\
             \ Link."
@@ -7143,15 +7337,14 @@ definitions:
           description: "none"
           $ref: "#/definitions/tapi.common.LayerProtocolName"
         role:
-          description: "Each EP of the FC has a role (e.g., working, protection, protected,\
-            \ symmetric, hub, spoke, leaf, root)  in the context of the FC with respect\
-            \ to the FC function. "
+          description: "The role of the (conceptual) port of the associated VirtualNetworkService."
           $ref: "#/definitions/tapi.common.PortRole"
         service-interface-point:
           description: "none"
           $ref: "#/definitions/tapi.common.ServiceInterfacePointRef"
         direction:
-          description: "The orientation of defined flow at the EndPoint."
+          description: "The orientation of flow at the (conceptual) port of the associated\
+            \ VirtualNetworkService."
           $ref: "#/definitions/tapi.common.PortDirection"
       description: "The association of the FC to LTPs is made via EndPoints.\r\n \
         \           The EndPoint (EP) object class models the access to the FC function.\
