--- a/OAS/tapi-path-computation.yaml
+++ b/OAS/tapi-path-computation.yaml
@@ -5473,52 +5473,6 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/node-rule-group={node-rule-group-uuid}/composed-rule-group={topology-uuid},{composed-rule-group-node-uuid},{composed-rule-group-node-rule-group-uuid}/
-  : get:
-      tags:
-      - "tapi-topology"
-      summary: "returns tapi.topology.NodeRuleGroupRef"
-      description: "NodeRuleGroups may be nested such that finer grained rules may\
-        \ be applied.\r\n                A nested rule group should have a subset\
-        \ of the NEPs of the superior rule group."
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of topology"
-        required: true
-        type: "string"
-      - name: "node-uuid"
-        in: "path"
-        description: "Id of node"
-        required: true
-        type: "string"
-      - name: "node-rule-group-uuid"
-        in: "path"
-        description: "Id of node-rule-group"
-        required: true
-        type: "string"
-      - name: "topology-uuid"
-        in: "path"
-        description: "Id of composed-rule-group"
-        required: true
-        type: "string"
-      - name: "composed-rule-group-node-uuid"
-        in: "path"
-        description: "Id of composed-rule-group"
-        required: true
-        type: "string"
-      - name: "composed-rule-group-node-rule-group-uuid"
-        in: "path"
-        description: "Id of composed-rule-group"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "tapi.topology.NodeRuleGroupRef"
-          schema:
-            $ref: "#/definitions/tapi.topology.NodeRuleGroupRefWrapper"
-        400:
-          description: "Internal error"
   ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/node-rule-group={node-rule-group-uuid}/cost-characteristic={cost-name}/
   : get:
       tags:
@@ -6276,6 +6230,52 @@ paths:
             $ref: "#/definitions/tapi.topology.NodeEdgePointRefWrapper"
         400:
           description: "Internal error"
+  ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/node-rule-group={node-rule-group-uuid}/node-rule-group={topology-uuid},{node-rule-group-node-uuid},{node-rule-group-node-rule-group-uuid}/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.topology.NodeRuleGroupRef"
+      description: "NodeRuleGroups may be nested such that finer grained rules may\
+        \ be applied.\r\n                A nested rule group should have a subset\
+        \ of the NEPs of the superior rule group."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of topology"
+        required: true
+        type: "string"
+      - name: "node-uuid"
+        in: "path"
+        description: "Id of node"
+        required: true
+        type: "string"
+      - name: "node-rule-group-uuid"
+        in: "path"
+        description: "Id of node-rule-group"
+        required: true
+        type: "string"
+      - name: "topology-uuid"
+        in: "path"
+        description: "Id of node-rule-group"
+        required: true
+        type: "string"
+      - name: "node-rule-group-node-uuid"
+        in: "path"
+        description: "Id of node-rule-group"
+        required: true
+        type: "string"
+      - name: "node-rule-group-node-rule-group-uuid"
+        in: "path"
+        description: "Id of node-rule-group"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.topology.NodeRuleGroupRef"
+          schema:
+            $ref: "#/definitions/tapi.topology.NodeRuleGroupRefWrapper"
+        400:
+          description: "Internal error"
   ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/node-rule-group={node-rule-group-uuid}/risk-characteristic={risk-characteristic-name}/
   : get:
       tags:
@@ -6702,48 +6702,12 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/owned-node-edge-point={owned-node-edge-point-uuid}/available-cep-layer-protocol={layer-protocol-qualifier}/
-  : get:
-      tags:
-      - "tapi-topology"
-      summary: "returns tapi.topology.NepLayerProtocolCapability"
-      description: "The potentially supported protocols and flows.\r\n           \
-        \     In ITU-T terms, the potentially supported adaptation and termination\
-        \ functions. "
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of topology"
-        required: true
-        type: "string"
-      - name: "node-uuid"
-        in: "path"
-        description: "Id of node"
-        required: true
-        type: "string"
-      - name: "owned-node-edge-point-uuid"
-        in: "path"
-        description: "Id of owned-node-edge-point"
-        required: true
-        type: "string"
-      - name: "layer-protocol-qualifier"
-        in: "path"
-        description: "Id of available-cep-layer-protocol"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "tapi.topology.NepLayerProtocolCapability"
-          schema:
-            $ref: "#/definitions/tapi.topology.NepLayerProtocolCapabilityWrapper"
-        400:
-          description: "Internal error"
   ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/owned-node-edge-point={owned-node-edge-point-uuid}/available-mux-sequence/
   : get:
       tags:
       - "tapi-topology"
       summary: "returns tapi.topology.MultiplexingSequence"
-      description: "More detailed description of available capability than 'availableCepLayerProtocol'."
+      description: "More detailed description of available capability than 'supportedCepLayerProtocol'."
       parameters:
       - name: "uuid"
         in: "path"
@@ -6899,12 +6863,48 @@ paths:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
+  ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/owned-node-edge-point={owned-node-edge-point-uuid}/supported-cep-layer-protocol={layer-protocol-qualifier}/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.topology.NepLayerProtocolCapability"
+      description: "The potentially supported protocols and flows.\r\n           \
+        \     In ITU-T terms, the potentially supported adaptation and termination\
+        \ functions. "
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of topology"
+        required: true
+        type: "string"
+      - name: "node-uuid"
+        in: "path"
+        description: "Id of node"
+        required: true
+        type: "string"
+      - name: "owned-node-edge-point-uuid"
+        in: "path"
+        description: "Id of owned-node-edge-point"
+        required: true
+        type: "string"
+      - name: "layer-protocol-qualifier"
+        in: "path"
+        description: "Id of supported-cep-layer-protocol"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.topology.NepLayerProtocolCapability"
+          schema:
+            $ref: "#/definitions/tapi.topology.NepLayerProtocolCapabilityWrapper"
+        400:
+          description: "Internal error"
   ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/owned-node-edge-point={owned-node-edge-point-uuid}/supported-mux-sequence/
   : get:
       tags:
       - "tapi-topology"
       summary: "returns tapi.topology.MultiplexingSequence"
-      description: "More detailed description of (potential) capability than 'availableCepLayerProtocol'."
+      description: "More detailed description of (potential) capability than 'supportedCepLayerProtocol'."
       parameters:
       - name: "uuid"
         in: "path"
@@ -8888,7 +8888,7 @@ definitions:
         description: "The number of CEP instances."
   tapi.topology.NepLayerProtocolCapabilityWrapper:
     properties:
-      available-cep-layer-protocol:
+      supported-cep-layer-protocol:
         $ref: "#/definitions/tapi.topology.NepLayerProtocolCapability"
   tapi.topology.NetworkTopologyService:
     allOf:
@@ -8978,13 +8978,6 @@ definitions:
             \ be considered experimental."
           items:
             $ref: "#/definitions/tapi.common.ServiceInterfacePointRef"
-        available-cep-layer-protocol:
-          type: "array"
-          description: "The potentially supported protocols and flows.\r\n       \
-            \         In ITU-T terms, the potentially supported adaptation and termination\
-            \ functions. "
-          items:
-            $ref: "#/definitions/tapi.topology.NepLayerProtocolCapability"
         aggregated-node-edge-point:
           type: "array"
           description: "A NodeEdgePoint (NEP) instance may aggregate one or more other\
@@ -8994,7 +8987,7 @@ definitions:
             $ref: "#/definitions/tapi.topology.NodeEdgePointRef"
         supported-mux-sequence:
           type: "array"
-          description: "More detailed description of (potential) capability than 'availableCepLayerProtocol'."
+          description: "More detailed description of (potential) capability than 'supportedCepLayerProtocol'."
           items:
             $ref: "#/definitions/tapi.topology.MultiplexingSequence"
         layer-protocol-name:
@@ -9002,9 +8995,16 @@ definitions:
           $ref: "#/definitions/tapi.common.LayerProtocolName"
         available-mux-sequence:
           type: "array"
-          description: "More detailed description of available capability than 'availableCepLayerProtocol'."
+          description: "More detailed description of available capability than 'supportedCepLayerProtocol'."
           items:
             $ref: "#/definitions/tapi.topology.MultiplexingSequence"
+        supported-cep-layer-protocol:
+          type: "array"
+          description: "The potentially supported protocols and flows.\r\n       \
+            \         In ITU-T terms, the potentially supported adaptation and termination\
+            \ functions. "
+          items:
+            $ref: "#/definitions/tapi.topology.NepLayerProtocolCapability"
         base-layer-protocol-qualifier:
           type: "string"
           description: "none"
@@ -9075,7 +9075,7 @@ definitions:
           description: "The list of rules of the NodeRuleGroup."
           items:
             $ref: "#/definitions/tapi.topology.Rule"
-        composed-rule-group:
+        node-rule-group:
           type: "array"
           description: "NodeRuleGroups may be nested such that finer grained rules\
             \ may be applied.\r\n                A nested rule group should have a\
@@ -9100,7 +9100,7 @@ definitions:
       description: "none"
   tapi.topology.NodeRuleGroupRefWrapper:
     properties:
-      composed-rule-group:
+      associated-node-rule-group:
         $ref: "#/definitions/tapi.topology.NodeRuleGroupRef"
   tapi.topology.NodeRuleGroupWrapper:
     properties:
