TapiConnectivity.yaml - edited POST connectivity-service

--- a/OAS/tapi-connectivity.yaml
+++ b/OAS/tapi-connectivity.yaml
@@ -532,7 +532,7 @@ paths:
         description: "tapi.connectivity.ConnectivityContext to be added to list"
         required: false
         schema:
-          $ref: "#/definitions/tapi.connectivity.ConnectivityContextWrapper"
+          $ref: "#/definitions/tapi.connectivity.ConnectivityContext"
       responses:
         201:
           description: "Object created"
