Notification, Fm, Oam, PathComputation:
TapiNotification: EventNotification signal includes two additional attributes: targetLocalObjectIdentifier, targetLocalObjectType.
TapiFm: updated comments of deprecated AlarmInfo and TcaInfo.
TapiOam: added LOOPBACK_TERMINAL and LOOPBACK_FACILITY Oam Job Types.
TapiPathComputation: TopologyConstraint, the include/excludePath attributes are now of “path” type, no longer the simple UUID.

--- a/OAS/tapi-fm.yaml
+++ b/OAS/tapi-fm.yaml
@@ -3332,11 +3332,15 @@ definitions:
         target-object-type:
           type: "string"
           description: "The Notification instance is related to the object instance\
-            \ with this ObjectType value."
+            \ (of a global class - with UUID) with this ObjectType value.\r\n    \
+            \            Alternatively, the Notification is related to the object\
+            \ instance of a local class, whose global object has this ObjectType value."
         target-object-identifier:
           type: "string"
           description: "The Notification instance is related to the object instance\
-            \ with this UUID value."
+            \ (of a global class) with this UUID value.\r\n                Alternatively,\
+            \ the Notification is related to the object instance of a local class,\
+            \ whose global object has this UUID value."
         event-time-stamp:
           type: "string"
           description: "The best knowledge of the time of the event which originated\
@@ -3367,6 +3371,14 @@ definitions:
             \ Notification instances.\r\n                The exact semantics of how\
             \ this sequence number is assigned (per channel or subscription or source\
             \ or system) is left undefined."
+        target-local-object-type:
+          type: "string"
+          description: "The Notification instance is related to the object instance\
+            \ of a local class, whose global object has targetObjectType value."
+        target-local-object-identifier:
+          type: "string"
+          description: "The Notification instance is related to the object instance\
+            \ of a local class, whose global object has targetObjectIdentifier value."
       description: "The Notification signal.\r\n            OMG UML(R) Version 2.5.1:\
         \ 'A Signal is a specification of a kind of communication between objects\
         \ in which a reaction is asynchronously triggered in the receiver without\
