--- a/OAS/tapi-path-computation.yaml
+++ b/OAS/tapi-path-computation.yaml
@@ -4594,6 +4594,133 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
+  ? /data/tapi-common:context/tapi-path-computation:path-computation-context/path-comp-service={uuid}/topology-constraint={local-id}/exclude-path/
+  : post:
+      tags:
+      - "tapi-path-computation"
+      summary: "creates tapi.path.computation.PathRef"
+      description: "The Path instance to be excluded from the connectivity route.\r\
+        \n                The type is generic UUID given read/write constraints, the\
+        \ Path is a readonly node."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of path-comp-service"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of topology-constraint"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.path.computation.PathRef.body-param"
+        description: "tapi.path.computation.PathRef to be added to list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.path.computation.PathRefWrapper"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
+  ? /data/tapi-common:context/tapi-path-computation:path-computation-context/path-comp-service={uuid}/topology-constraint={local-id}/exclude-path={path-uuid}/
+  : get:
+      tags:
+      - "tapi-path-computation"
+      summary: "returns tapi.path.computation.PathRef"
+      description: "The Path instance to be excluded from the connectivity route.\r\
+        \n                The type is generic UUID given read/write constraints, the\
+        \ Path is a readonly node."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of path-comp-service"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of topology-constraint"
+        required: true
+        type: "string"
+      - name: "path-uuid"
+        in: "path"
+        description: "Id of exclude-path"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.path.computation.PathRef"
+          schema:
+            $ref: "#/definitions/tapi.path.computation.PathRefWrapper"
+        400:
+          description: "Internal error"
+    put:
+      tags:
+      - "tapi-path-computation"
+      summary: "creates or updates tapi.path.computation.PathRef"
+      description: "The Path instance to be excluded from the connectivity route.\r\
+        \n                The type is generic UUID given read/write constraints, the\
+        \ Path is a readonly node."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of path-comp-service"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of topology-constraint"
+        required: true
+        type: "string"
+      - name: "path-uuid"
+        in: "path"
+        description: "Id of exclude-path"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.path.computation.PathRef.body-param"
+        description: "tapi.path.computation.PathRef to be added or updated"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.path.computation.PathRefWrapper"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        204:
+          description: "Object modified"
+    delete:
+      tags:
+      - "tapi-path-computation"
+      summary: "removes tapi.path.computation.PathRef"
+      description: "The Path instance to be excluded from the connectivity route.\r\
+        \n                The type is generic UUID given read/write constraints, the\
+        \ Path is a readonly node."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of path-comp-service"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of topology-constraint"
+        required: true
+        type: "string"
+      - name: "path-uuid"
+        in: "path"
+        description: "Id of exclude-path"
+        required: true
+        type: "string"
+      responses:
+        400:
+          description: "Internal error"
+        204:
+          description: "Object deleted"
   ? /data/tapi-common:context/tapi-path-computation:path-computation-context/path-comp-service={uuid}/topology-constraint={local-id}/exclude-topology/
   : post:
       tags:
@@ -5127,6 +5254,133 @@ paths:
       - name: "node-uuid"
         in: "path"
         description: "Id of include-node"
+        required: true
+        type: "string"
+      responses:
+        400:
+          description: "Internal error"
+        204:
+          description: "Object deleted"
+  ? /data/tapi-common:context/tapi-path-computation:path-computation-context/path-comp-service={uuid}/topology-constraint={local-id}/include-path/
+  : post:
+      tags:
+      - "tapi-path-computation"
+      summary: "creates tapi.path.computation.PathRef"
+      description: "The Path instance to be followed by the connectivity route.\r\n\
+        \                The type is generic UUID given read/write constraints, the\
+        \ Path is a readonly node."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of path-comp-service"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of topology-constraint"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.path.computation.PathRef.body-param"
+        description: "tapi.path.computation.PathRef to be added to list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.path.computation.PathRefWrapper"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
+  ? /data/tapi-common:context/tapi-path-computation:path-computation-context/path-comp-service={uuid}/topology-constraint={local-id}/include-path={path-uuid}/
+  : get:
+      tags:
+      - "tapi-path-computation"
+      summary: "returns tapi.path.computation.PathRef"
+      description: "The Path instance to be followed by the connectivity route.\r\n\
+        \                The type is generic UUID given read/write constraints, the\
+        \ Path is a readonly node."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of path-comp-service"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of topology-constraint"
+        required: true
+        type: "string"
+      - name: "path-uuid"
+        in: "path"
+        description: "Id of include-path"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.path.computation.PathRef"
+          schema:
+            $ref: "#/definitions/tapi.path.computation.PathRefWrapper"
+        400:
+          description: "Internal error"
+    put:
+      tags:
+      - "tapi-path-computation"
+      summary: "creates or updates tapi.path.computation.PathRef"
+      description: "The Path instance to be followed by the connectivity route.\r\n\
+        \                The type is generic UUID given read/write constraints, the\
+        \ Path is a readonly node."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of path-comp-service"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of topology-constraint"
+        required: true
+        type: "string"
+      - name: "path-uuid"
+        in: "path"
+        description: "Id of include-path"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.path.computation.PathRef.body-param"
+        description: "tapi.path.computation.PathRef to be added or updated"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.path.computation.PathRefWrapper"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        204:
+          description: "Object modified"
+    delete:
+      tags:
+      - "tapi-path-computation"
+      summary: "removes tapi.path.computation.PathRef"
+      description: "The Path instance to be followed by the connectivity route.\r\n\
+        \                The type is generic UUID given read/write constraints, the\
+        \ Path is a readonly node."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of path-comp-service"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of topology-constraint"
+        required: true
+        type: "string"
+      - name: "path-uuid"
+        in: "path"
+        description: "Id of include-path"
         required: true
         type: "string"
       responses:
@@ -9254,11 +9508,15 @@ definitions:
         target-object-type:
           type: "string"
           description: "The Notification instance is related to the object instance\
-            \ with this ObjectType value."
+            \ (of a global class - with UUID) with this ObjectType value.\r\n    \
+            \            Alternatively, the Notification is related to the object\
+            \ instance of a local class, whose global object has this ObjectType value."
         target-object-identifier:
           type: "string"
           description: "The Notification instance is related to the object instance\
-            \ with this UUID value."
+            \ (of a global class) with this UUID value.\r\n                Alternatively,\
+            \ the Notification is related to the object instance of a local class,\
+            \ whose global object has this UUID value."
         event-time-stamp:
           type: "string"
           description: "The best knowledge of the time of the event which originated\
@@ -9289,6 +9547,14 @@ definitions:
             \ Notification instances.\r\n                The exact semantics of how\
             \ this sequence number is assigned (per channel or subscription or source\
             \ or system) is left undefined."
+        target-local-object-type:
+          type: "string"
+          description: "The Notification instance is related to the object instance\
+            \ of a local class, whose global object has targetObjectType value."
+        target-local-object-identifier:
+          type: "string"
+          description: "The Notification instance is related to the object instance\
+            \ of a local class, whose global object has targetObjectIdentifier value."
       description: "The Notification signal.\r\n            OMG UML(R) Version 2.5.1:\
         \ 'A Signal is a specification of a kind of communication between objects\
         \ in which a reaction is asynchronously triggered in the receiver without\
@@ -9792,18 +10058,18 @@ definitions:
   tapi.path.computation.ObjectNotificationAugmentation2:
     type: "object"
     properties:
-      path-service-end-point:
+      path-objective-function:
         description: "none"
-        $ref: "#/definitions/tapi.path.computation.PathServiceEndPoint"
+        $ref: "#/definitions/tapi.path.computation.PathObjectiveFunction"
     x-augmentation:
       prefix: "tapi-path-computation"
       namespace: "urn:onf:otcc:yang:tapi-path-computation"
   tapi.path.computation.ObjectNotificationAugmentation3:
     type: "object"
     properties:
-      path-objective-function:
+      path-service-end-point:
         description: "none"
-        $ref: "#/definitions/tapi.path.computation.PathObjectiveFunction"
+        $ref: "#/definitions/tapi.path.computation.PathServiceEndPoint"
     x-augmentation:
       prefix: "tapi-path-computation"
       namespace: "urn:onf:otcc:yang:tapi-path-computation"
@@ -10065,7 +10331,7 @@ definitions:
             \n                The type is generic UUID given read/write constraints,\
             \ the Path is a readonly node."
           items:
-            type: "string"
+            $ref: "#/definitions/tapi.path.computation.PathRef"
         include-topology:
           type: "array"
           description: "The Topology instance to be included in the connectivity route."
@@ -10077,7 +10343,7 @@ definitions:
             \n                The type is generic UUID given read/write constraints,\
             \ the Path is a readonly node."
           items:
-            type: "string"
+            $ref: "#/definitions/tapi.path.computation.PathRef"
         exclude-node-edge-point:
           type: "array"
           description: "The NodeEdgePoint (NEP) instance to be excluded from the connectivity\
